@@ -912,6 +912,7 @@ public class TownyUniverse extends TownyObject {
                         getDataSource().initialize(plugin, this);
                         try {
                                 getDataSource().backup();
+                                getDataSource().deleteUnusedResidentFiles();
                         } catch (IOException e) {
                                 System.out.println("[Towny] Error: Could not create backup.");
                                 e.printStackTrace();
