@@ -823,3 +823,4 @@ v0.77.1.0:
 v0.77.1.1:
 	- Fix for PEX world based prefix/suffix.
 	- Moved resident purging to it's own thread.
+	- Towny will now remove any unused resident files after it performs it's backup.
